--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,8 +18,10 @@
   },
   "homepage": "https://github.com/officecowboy/information-arcade#readme",
   "dependencies": {
+    "@vidstack/player": "^1.6.1",
     "dom-to-image": "^2.6.0",
     "express": "^4.18.1",
-    "html2canvas-proxy": "^1.0.1"
+    "html2canvas-proxy": "^1.0.1",
+    "lit": "^2.2.6"
   }
 }
